# nyaxiom

./: .gitignore  LICENSE  README.md  app.py  install.py  main.py  pyproject.toml  qc.py  run.py  uninstall.py
.zed/: settings.json
services/: axiomd.service
src/db/: model.py
src/features/: logs.py  weather.py
src/mixin/: configurable_interval.py  search_engine.py  show_weather.py
src/routes/api/: routes.py
src/routes/main/: routes.py
src/utils/hardware/: cpu.py  ram.py
src/utils/misc/: colors.py  dirutil.py  nyaplatform.py  units.py
static/css/: styles.css
static/js/: app.js
templates/: base.jinja2  cpu.jinja2  home.jinja2  logs.jinja2  settings.jinja2
templates/partials/: _heatmap.jinja2  _search.jinja2  _sidebar.jinja2  _stat_card.jinja2  _weather_panel.jinja2
