[project]
name = "nyaxiom"
version = "0.1.0"
description = "System monitor / managment tool for homelabs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "httpx>=0.28.1",
    "hypercorn>=0.18.0",
    "quart>=0.20.0",
    "quart-flask-patch>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.33",
]
